--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,3 @@
-button {
-  background-color: none;
-  border: none;
-  cursor: pointer;
-}
-
 body {
   font-family: Arial;
   background-color: yellow;
@@ -14,18 +8,14 @@ body {
 }
 
 input {
-  width: 100%;
+  width: 80%;
+  height: 20px;
+  margin-bottom: 10px;
   border: 1px solid rgb(12, 12, 8);
-  display: block;
+  display: left;
   border-radius: 5px;
   font-size: 16px;
   padding: 10px;
-}
-
-label {
-  font-weight: 500;
-  display: block;
-  margin-bottom: 3px;
 }
 
 .form {
@@ -35,13 +25,13 @@ label {
   padding: 75px;
 }
 
+.form_item{clear:both; text-align:right; line-height:25px;}
+
+label {float:left; padding-right:10px;}
+
 .form_title{
   margin-bottom: 20px;
   text-align: center;
-}
-
-.form_item{
-  margin-bottom: 16px;
 }
 
 .form_btn{
@@ -50,22 +40,14 @@ label {
   padding: 20px 30px;
   align-self: center;
   transition: background-color 0.3s;
+  border-radius: 20px;
 }
 
 .form_btn:hover{
   background-color: rgb(20, 150, 15);
 }
 
-img {
-  position: center;
-  margin: auto;
-}
-
 .errortext {
   color: red;
 }
 
-.form_input {
-display: flex;
-justify-content: right;
-}
