--- a/src/styles/styles1.css
+++ b/src/styles/styles1.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial;
+  font-family: Arial, sans-serif;
   background-color: yellow;
   display: flex;
   justify-content: center;
@@ -11,14 +11,14 @@ body {
   margin-top: 70px;
 }
 
-.form_title{
+.form_title {
   margin-bottom: 20px;
   text-align: center;
 }
 
-.form_btn{
-  background-color: rgb(35, 175, 25);
-  color:blue;
+.form_btn {
+  background-color: rgb(35 175 25);
+  color: blue;
   padding: 20px 30px;
   align-self: center;
   transition: background-color 0.3s;
@@ -30,6 +30,12 @@ table {
   width: 100%;
   border-collapse: collapse;
   border: 3px solid purple;
+}
+
+th,
+td {
+  border: 1px solid gray;
+  padding: 15px 40px;
 }
 
 thead th:nth-child(1) {
@@ -52,17 +58,6 @@ thead th:nth-child(5) {
   width: 10%;
 }
 
-th,
-td {
-  padding: 20px;
-}
-
-td,
-th {
-  border: 1px solid gray;
-  padding: 15px 40px;
-}
-
 thead {
   max-width: 200px;
 }
@@ -71,8 +66,17 @@ tbody {
   min-width: 300px;
 }
 
-.form_item{clear:both; text-align:right; line-height:25px;}
+.form_item {
+  clear: both;
+  text-align: right;
+  line-height: 25px;
+}
 
-label {float:left; padding-right:10px;}
+label {
+  float: left;
+  padding-right: 10px;
+}
 
-.main {float:left}
+.main {
+  float: left;
+}
