--- a/src/styles/styles1.css
+++ b/src/styles/styles1.css
@@ -1,7 +1,6 @@
 body {
   font-family: Arial, sans-serif;
   background-color: yellow;
-  display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
@@ -31,6 +30,13 @@ table {
   width: 100%;
   border-collapse: collapse;
   border: 3px solid purple;
+}
+
+fieldset {
+  table-layout: fixed;
+  width: 200%;
+  border-collapse: collapse;
+  border: 3px solid rgb(128 64 0);
 }
 
 th,
@@ -72,9 +78,8 @@ tbody {
 }
 
 .form_item {
-  clear: both;
-  text-align: right;
-  line-height: 25px;
+  margin-bottom: 20px;
+  text-align: center;
 }
 
 label {
@@ -92,4 +97,20 @@ label {
   padding: 12px 20px 12px 40px;
   border: 1px solid #ddd;
   margin-bottom: 12px;
+}
+
+.form_input {
+  height: 20px;
+  margin-bottom: 10px;
+  border: 1px solid;
+  border-radius: 5px;
+  font-size: 16px;
+  padding: 10px;
+}
+
+.form_cont_input {
+  width: 20%;
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
 }
