--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -107,3 +107,48 @@ input[type='radio'] {
   width: 20px;
   height: 20px;
 }
+
+.search-container {
+  height: 20px;
+  text-align: center;
+}
+
+.container {
+  display: flex;
+  flex-direction: column; /* для узких экранов */
+  align-items: center;
+  gap: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.image_block,
+.form_block {
+  width: 100%;
+}
+
+.image_block img {
+  width: 100%;
+  height: auto;
+  display: block;
+  border-radius: 8px;
+}
+
+/* Стили для широких экранов (от 768px и выше) */
+@media (width >= 768px) {
+  .container {
+    flex-direction: row; /* Выстраиваем в ряд */
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+
+  .image_block {
+    flex: 1; /* Занимает 50% места */
+  }
+
+  .form_block {
+    flex: 1; /* Занимает 50% места */
+    padding-left: 40px;
+  }
+}
