--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -152,3 +152,13 @@ input[type='radio'] {
     padding-left: 40px;
   }
 }
+
+.users_btn {
+  background-color: rgb(218 107 216);
+  color: rgb(3 51 65);
+  padding: 40px 30px;
+  margin-left: auto;
+  transition: background-color 0.3s;
+  border-radius: 40px;
+  margin-top: 10px;
+}
